# autolua_jinlan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xmake.lua
resources/: functions.lua  resources.qrc
src/: Configure.h  CustomFunction.h  DataModel.cc  DataModel.h  FunctionInfo.h  FunctionList.cc  FunctionList.h  ImageWidget.cc  ImageWidget.h  LuaInterpreter.cc  LuaInterpreter.h  MagnifierView.cc  MagnifierView.h  MainWindow.cc  MainWindow.h  PointItem.cc  PointItem.h  ToolbarWidget.cc  ToolbarWidget.h  main.cc
